<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HIMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_screen_receiver">ScreenReceiver</string>
    <string name="title_activity_lock_screen">LockScreen</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_walkie">WalkieActivity</string>
    <string name="title_activity_room_detail_activity">RoomDetailactivity</string>
    <string name="title_activity_room_information">RoomInformation</string>
    <string name="title_activity_insepection">InsepectionActivity</string>
    <string name="title_activity_inspection">InspectionActivity</string>
    <string name="title_activity_short_form">ShortForm</string>
    <string name="title_activity_long_form">LongForm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_sending_page">SendingPage</string>
    <string name="title_activity_list_page">ListPage</string>
    <string name="title_activity_history_page">HistoryPage</string>
    <string name="title_activity_peer_selection">PeerSelection</string>
    <string name="title_activity_channel_creation">ChannelCreation</string>
    <string name="title_activity_ui_page">UIPage</string>
    <string name="title_activity_assigned_room">AssignedRoomActivity</string>
    <string name="title_activity_requirement">RequirementActivity</string>
    <string name="title_activity_main_staff">MainStaffActivity</string>

    //bj
    <string name="logout">logout</string>
    <string name="radio">Radio</string>
    <string name="room">Room</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">Jan</string>
    <string name="febuary">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="title_activity_logout_dialog_acitivity">LogoutDialogAcitivity</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">ok</string>
    <string name="logoutDialogText">Are you sure?</string>
    <string name="roomAlreadyCleanDialogText">This room\n has been cleaned.</string>
    <string name="title_activity_room_already_clean_dialog_acitivity">
        RoomAlreadyCleanDialogAcitivity
    </string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="checkedOut">Checked out</string>
    <string name="vc">VC</string>
    <string name="oc">OC</string>
    <string name="dnd">DND</string>
    <string name="rsa">RSA</string>
    <string name="title_activity_chanel_add_dialog">ChanelAddDialogActivity</string>
    <string name="chaneladd">Chanel add</string>
    <string name="title_activity_channel_member_list">ChannelMemberListActivity</string>
    <string name="cancel">Cancel</string>
    <string name="reply">Reply</string>
    <string name="title_activity_are_you_sure_dialog">AreYouSureDialogActivity</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="title_activity_set_up">SetUpActivity</string>
</resources>
